Add markdown cells for Model 2 and Model 3 results sections in the notebook

--- a/histopathologic_cancer_detection.ipynb
+++ b/histopathologic_cancer_detection.ipynb
@@ -1787,6 +1787,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Model 2 Results"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "pt6paVdVXCgI"
       },
@@ -2229,6 +2236,13 @@
       ],
       "source": [
         "best_model.evaluate(valid_generator)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Model 3 Results"
       ]
     },
     {
